--- a/package.json
+++ b/package.json
@@ -2,12 +2,24 @@
   "name": "habitica-challenge-translation",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.14.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "bootstrap": "^4.5.2",
+    "html-react-parser": "^0.13.0",
+    "i18next": "^19.6.3",
+    "i18next-browser-languagedetector": "^6.0.0",
+    "marked": "^1.1.1",
+    "nedb": "^1.8.0",
+    "node-fetch": "^2.6.0",
+    "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-i18next": "^11.7.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3"
   },
   "scripts": {
