--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "habitica-challenge-translation",
+  "homepage": "http://ys-chen.github.io/habitica-challenge-translation",
   "version": "0.1.0",
   "private": true,
   "type": "module",
@@ -26,7 +27,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
